<resources>
    <string name="app_name">My Application</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_title">Let\'s find out\n your love type!</string>
    <string name="question">There were favorite flowers\nin the flower base.\nAs time goes, the flowers\nhave all withered.\nWhat are you going to do with that?</string>
    <string name="success">SUCCESS</string>
    <string name="warning">WARNING</string>
    <string name="error">ERROR</string>
    <string name="success_title">This is success title</string>
    <string name="warning_title">This is warning title</string>
    <string name="error_title">This is error title</string>
    <string name="dummy_text">Lorem Ipsum is simply dummy text of the printing and type setting industry</string>
    <string name="okay">Okay</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="share_now">Share Now</string>
    <string name="women_s_synthetic_lines_dress">Women\'s Synthetic Lines Dress</string>
    <string name="free_delivery">Free Delivery</string>
    <string name="u20b9_734">u20b9_734</string>
    <string name="add_to_favorites">Add To Favorites</string>
    <string name="share_product_via">Share Product Via...</string>
    <string name="share">SHARE</string>
    <string name="show_bottom_sheet_dialog">SHOW BOTTOM SHEET DIALOG</string>
    <string name="demo_text">Demo Text</string>
    <string name="skip_intro">skip_intro</string>
    <string name="next">next</string>


</resources>
