<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".customalertdialog.CustomAlertDialogMainActivity">

    <Button
        android:id="@+id/buttonSuccess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/success"
        android:textSize="16sp"
        tools:ignore="ButtonSyle" />

    <Button
        android:id="@+id/buttonWarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/warning"
        tools:ignore="ButtonSyle" />

    <Button
        android:id="@+id/buttonError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error"
        android:textSize="16sp"
        tools:ignore="ButtonSyle" />
</LinearLayout>